--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList"> Pants</li>
+		<li data-ns-test="shoppingList">continental</li>
+		<li data-ns-test="shoppingList">car</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList"> shillong</li>
+		<li data-ns-test="holidayList">jammmu</li>
+		<li data-ns-test="holidayList">Srikhand</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
